k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: egudoc
  labels:
    app.kubernetes.io/name: egudoc
