k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egudoc
  namespace: egudoc
spec:
  selector:
    app: egudoc
  ports:
    - name: http
      port: 80
      targetPort: 8090
  type: ClusterIP
